changed the figcaptions vertical align to top and center for web previews and image previews respectively. Changed all figcaptions to display:block and width: 100% to fix formatting issues.

--- a/style.css
+++ b/style.css
@@ -536,10 +536,10 @@ figure:hover>div.preview-link {
 }
 
 figcaption {
-	display: table-cell;
+	display: block;
 	position: relative;
 	top: 0;
-	width: auto;
+	width: 100%;
 	padding: 1em;
 	text-align: justify;
 	font-weight: bold;
@@ -555,15 +555,16 @@ figcaption h1, figcaption h3, figcaption p:not(:last-child){padding-bottom: .5em
 
 figcaption.not-mobile {
 	height: 15em;
-	vertical-align: bottom;
+	vertical-align: center;
 	font-size: .87em;
 }
 
 div.flex-images>a {
 	text-decoration: none;
-	vertical-align: top;
 	color: #10002d;
 }
+
+a>figure>figcaption {vertical-align: top;}
 
 figcaption.mobile {
 	vertical-align: top;
